# r2e

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REPO_MAP.md  TECH_DEBT.md  TEST_DEVELOPMENT_PLAN.md  application.yaml  llm.txt  plan.md  publish.md  r2e-macros_audit.md  r2e-security-audit.md  refacto1.md  test_clone  todo
example-app/: Cargo.toml
example-app/src/: db_identity.rs  main.rs  models.rs  services.rs  state.rs
example-app/tests/: consumer_test.rs  user_controller_test.rs
example-microservice/: Cargo.toml  application-order.yaml  application-product.yaml
quarlus/: Cargo.toml
quarlus-cache/: Cargo.toml
quarlus-core/: Cargo.toml
quarlus-core/src/: beans.rs  builder.rs  cache.rs  config.rs  controller.rs  dev.rs  error.rs  guards.rs  health.rs  interceptors.rs  layers.rs  lib.rs  lifecycle.rs  managed.rs  openapi.rs  plugin.rs  plugins.rs  prelude.rs  request_id.rs  scheduling.rs  secure_headers.rs  sse.rs  state.rs  type_list.rs  types.rs  validation.rs
quarlus-data/: Cargo.toml
quarlus-data/src/: crud.rs  error.rs  lib.rs  migration.rs  page.rs  repository.rs
quarlus-events/: Cargo.toml
quarlus-events/src/: lib.rs
quarlus-macros/: Cargo.toml
quarlus-macros/src/: attr_extract.rs  bean_attr.rs  bean_derive.rs  bean_state_derive.rs  codegen.rs  controller.rs  crate_path.rs  derive_codegen.rs  derive_parsing.rs  lib.rs  parsing.rs  route.rs  routes_attr.rs  routes_codegen.rs  routes_parsing.rs  types.rs
quarlus-openapi/: Cargo.toml
quarlus-openapi/assets/: wti-element.css  wti-element.iife.js
quarlus-openapi/src/: builder.rs  ext.rs  handlers.rs  lib.rs  schema.rs
quarlus-prometheus/: Cargo.toml
quarlus-prometheus/src/: handler.rs  layer.rs  lib.rs  metrics.rs
quarlus-rate-limit/: Cargo.toml
quarlus-rate-limit/src/: guard.rs  lib.rs
quarlus-scheduler/: Cargo.toml
quarlus-scheduler/src/: lib.rs  types.rs
quarlus-security/: Cargo.toml
quarlus-security/src/: error.rs  extractor.rs  identity.rs  jwks.rs  jwt.rs  keycloak.rs  lib.rs  openid.rs
quarlus-test/: Cargo.toml
quarlus-test/src/: app.rs  jwt.rs  lib.rs
quarlus-utils/: Cargo.toml
quarlus-utils/src/: interceptors.rs  lib.rs
quarlus/src/: lib.rs
r2e-cache/: Cargo.toml  README.md  TEST_DEVELOPMENT_PLAN.md
r2e-cache/src/: lib.rs
r2e-cache/tests/: ttl_cache.rs
r2e-cli/: Cargo.toml  README.md  TEST_DEVELOPMENT_PLAN.md
r2e-cli/src/: lib.rs  main.rs
r2e-cli/tests/: add.rs  dev.rs  docs.rs  doctor.rs  generate.rs  new_project.rs  routes.rs  templates.rs
r2e-compile-tests/: Cargo.toml  README.md  build.rs
r2e-compile-tests/compile-fail/: anonymous_calls_request_helper.stderr  anonymous_reads_identity.stderr  anonymous_with_identity_param.stderr  anonymous_with_optional_struct_identity.stderr  anonymous_with_roles.stderr  anonymous_without_identity.stderr  async_exec_intercept.rs  async_exec_intercept.stderr  async_exec_route_conflict.stderr  async_exec_scheduled_conflict.stderr  bean_async_exec_intercept.stderr  bean_async_exec_mut_self.rs  bean_async_exec_mut_self.stderr  bean_async_exec_scheduled_conflict.stderr  bean_async_exec_sync.stderr  bean_derive_enum.rs  bean_derive_enum.stderr  bean_derive_tuple.rs  bean_derive_tuple.stderr  bean_intercept_impl_level_no_methods.rs  bean_intercept_impl_level_no_methods.stderr  bean_intercept_missing_dep.stderr  bean_intercept_missing_slot.rs  bean_intercept_missing_slot.stderr  bean_intercept_outside_literal.stderr  bean_intercept_plain_method.rs  bean_intercept_plain_method.stderr  bean_no_constructor.rs  bean_no_constructor.stderr  bean_post_construct_pre_destroy.rs  bean_post_construct_pre_destroy.stderr  bean_scheduled_consumer_conflict.stderr  bean_scheduled_intercept.rs  bean_scheduled_intercept.stderr  bean_scheduled_lazy.stderr  bean_scheduled_skip_if_params.stderr  bean_scheduled_with_params.stderr  bean_with_self.stderr  config_bare_default_non_section.rs  config_bare_default_non_section.stderr  (+152 more)
r2e-compile-tests/compile-pass/: basic_controller.rs  bean_async_exec.rs  bean_intercept.rs  bean_state_basic.rs  bean_state_skip.rs  bean_sync.rs  config_injection.rs  config_properties_basic.rs  config_properties_custom_key.rs  config_properties_defaults.rs  config_properties_optional.rs  consumer.rs  consumer_on_identity_controller.rs  controller_identity_guard_interceptor_managed.rs  controller_transverse.rs  core_helper_from_facade.rs  feature_module.rs  fga_client_typed.rs  fga_guard_anonymous_optional_param.rs  fga_guard_struct_identity.rs  fga_model_typed.rs  from_multipart_optional.rs  guard_realtime_path_symbols.rs  guard_tuple_struct_ctor.rs  guards.rs  identity_controller.rs  interceptors.rs  mixed_controller.rs  module_controller_guard_dep_in_scope.rs  module_imports_module.rs  module_required_plugin_installed.rs  multiple_routes.rs  openfga_from_path_match.rs  optional_identity.rs  optional_struct_identity.rs  pre_destroy.rs  producer.rs  request_scope_field.rs  scheduled.rs  sse_ws_identity.rs  (+2 more)
r2e-compile-tests/proto/: ping.proto
r2e-compile-tests/src/: lib.rs
r2e-compile-tests/tests/: compile_tests.rs
r2e-core/: Cargo.toml  README.md  TEST_DEVELOPMENT_PLAN.md
r2e-core/benches/: controller_dispatch.rs
r2e-core/src/: beans.rs  builder.rs  bundle.rs  config.rs  controller.rs  decorator.rs  dev.rs  error.rs  event_subscriber.rs  extract.rs  guards.rs  health.rs  interceptors.rs  late.rs  layers.rs  lazy.rs  lib.rs  lifecycle.rs  managed.rs  meta.rs  module.rs  multipart.rs  openapi.rs  pagination.rs  params.rs  plugin.rs  plugins.rs  prelude.rs  proxy.rs  request_id.rs  rt.rs  scheduled_source.rs  secure_headers.rs  service.rs  (+9 more)
r2e-data/: Cargo.toml  README.md  TEST_DEVELOPMENT_PLAN.md
r2e-data-diesel/: Cargo.toml  README.md
r2e-data-sqlx/: Cargo.toml  README.md
r2e-devservices/: Cargo.toml  README.md  TEST_DEVELOPMENT_PLAN.md
r2e-devtools/: Cargo.toml  README.md
r2e-events/: Cargo.toml  README.md  TEST_DEVELOPMENT_PLAN.md
r2e-events-iggy/: Cargo.toml
r2e-events-kafka/: Cargo.toml
r2e-events-pulsar/: Cargo.toml
r2e-events-rabbitmq/: Cargo.toml
(+1127 files in other folders)
