[workspace]
members = [
    "r2e-core",
    "r2e-macros",
    "r2e-cache",
    "r2e-rate-limit",
    "r2e-security",
    "r2e-data",
    "r2e-data-sqlx",
    "r2e-data-diesel",
    "r2e-openapi",
    "r2e-events",
    "r2e-scheduler",
    "r2e-prometheus",
    "r2e-observability",
    "r2e-openfga",
    "r2e-grpc",
    "r2e-oidc",
    "r2e-cli",
    "r2e-test",
    "r2e-utils",
    "r2e",
    "examples/example-app",
    "examples/example-postgres",
    "examples/example-multi-tenant",
    "examples/example-websocket-chat",
    "examples/example-grpc",
    "examples/example-microservice",
    "r2e-compile-tests",
]
resolver = "2"

[patch.crates-io]
openfga-rs = { path = "vendor/openfga-rs" }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/plawn/r2e"
homepage = "https://github.com/plawn/r2e"
authors = ["Plawn"]
keywords = ["web", "framework", "axum", "dependency-injection"]
categories = ["web-programming::http-server", "asynchronous"]
