[workspace]
members = [
    "r2e-core",
    "r2e-macros",
    "r2e-cache",
    "r2e-rate-limit",
    "r2e-security",
    "r2e-data",
    "r2e-data-sqlx",
    "r2e-data-diesel",
    "r2e-openapi",
    "r2e-events",
    "r2e-events-iggy",
    "r2e-events-kafka",
    "r2e-events-pulsar",
    "r2e-events-rabbitmq",
    "r2e-scheduler",
    "r2e-executor",
    "r2e-prometheus",
    "r2e-observability",
    "r2e-openfga",
    "r2e-grpc",
    "r2e-oidc",
    "r2e-devtools",
    "r2e-static",
    "r2e-http",
    "r2e-cli",
    "r2e-test",
    "r2e-utils",
    "r2e",
    "examples/example-app",
    "examples/example-postgres",
    "examples/example-multi-tenant",
    "examples/example-websocket-chat",
    "examples/example-grpc",
    "examples/example-microservice",
    "examples/example-oidc",
    "examples/example-executor",
    "r2e-compile-tests",
]
resolver = "2"

[patch.crates-io]
openfga-rs = { path = "vendor/openfga-rs" }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/plawn/r2e"
homepage = "https://github.com/plawn/r2e"
authors = ["Plawn"]
keywords = ["web", "framework", "axum", "dependency-injection"]
categories = ["web-programming::http-server", "asynchronous"]

[workspace.dependencies]
# Internal crates
r2e = { path = "r2e", version = "0.1.0" }
r2e-core = { path = "r2e-core", version = "0.1.0" }
r2e-macros = { path = "r2e-macros", version = "0.1.0" }
r2e-security = { path = "r2e-security", version = "0.1.0" }
r2e-data = { path = "r2e-data", version = "0.1.0" }
r2e-data-sqlx = { path = "r2e-data-sqlx", version = "0.1.0" }
r2e-data-diesel = { path = "r2e-data-diesel", version = "0.1.0" }
r2e-events = { path = "r2e-events", version = "0.1.0" }
r2e-events-iggy = { path = "r2e-events-iggy", version = "0.1.0" }
r2e-events-kafka = { path = "r2e-events-kafka", version = "0.1.0" }
r2e-events-pulsar = { path = "r2e-events-pulsar", version = "0.1.0" }
r2e-events-rabbitmq = { path = "r2e-events-rabbitmq", version = "0.1.0" }
r2e-scheduler = { path = "r2e-scheduler", version = "0.1.0" }
r2e-executor = { path = "r2e-executor", version = "0.1.0" }
r2e-cache = { path = "r2e-cache", version = "0.1.0" }
r2e-rate-limit = { path = "r2e-rate-limit", version = "0.1.0" }
r2e-utils = { path = "r2e-utils", version = "0.1.0" }
r2e-openapi = { path = "r2e-openapi", version = "0.1.0" }
r2e-prometheus = { path = "r2e-prometheus", version = "0.1.0" }
r2e-observability = { path = "r2e-observability", version = "0.1.0" }
r2e-openfga = { path = "r2e-openfga", version = "0.1.0" }
r2e-grpc = { path = "r2e-grpc", version = "0.1.0" }
r2e-oidc = { path = "r2e-oidc", version = "0.1.0" }
r2e-devtools = { path = "r2e-devtools", version = "0.1.0" }
r2e-static = { path = "r2e-static", version = "0.1.0" }
r2e-http = { path = "r2e-http", version = "0.1.0" }
r2e-test = { path = "r2e-test", version = "0.1.0" }

# Core
tokio = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
axum = "0.8"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = "1"
hyper-util = "0.1"
bytes = "1"
tokio-util = "0.7"
tokio-stream = "0.1"
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"
uuid = { version = "1", features = ["v4"] }
form_urlencoded = "1"
chrono = "0.4"
dashmap = "6"
url = "2"
base64 = "0.22"
dotenvy = "0.15"

# Security
jsonwebtoken = "10"
reqwest = { version = "0.13", default-features = false }
rsa = "0.9"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"

# Data
sqlx = { version = "0.8", features = ["runtime-tokio"] }
diesel = "2"

# Events
iggy = "0.9"
rdkafka = { version = "0.39", features = ["tokio"] }
pulsar = "6"
lapin = "2"
tokio-executor-trait = "2"
tokio-reactor-trait = "1"

# Scheduler
cron = "0.16"

# gRPC
tonic = { version = "~0.13", default-features = false }
prost = "~0.13"
tonic-reflection = "~0.13"
tonic-build = "~0.13"

# Observability
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"
prometheus = "0.14"

# Validation & serialization
garde = { version = "0.22", features = ["derive"] }
schemars = "1"

# CLI
clap = { version = "4", features = ["derive"] }
toml_edit = "0.25"
colored = "3"
dialoguer = "0.12"

# Proc-macro
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"

# Static files
rust-embed = "8"
mime_guess = "2"

# Devtools
dioxus-devtools = { version = "0.7", features = ["serve"] }

# Misc
openfga-rs = "0.1"

# Testing
tokio-tungstenite = "0.28"

# Dev
tempfile = "3"
serial_test = "3"
trybuild = "1"
