[package]
name = "example-app"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
quarlus-core = { path = "../quarlus-core", features = ["sqlx", "validation"] }
quarlus-macros = { path = "../quarlus-macros" }
quarlus-cache = { path = "../quarlus-cache" }
quarlus-rate-limit = { path = "../quarlus-rate-limit" }
quarlus-security = { path = "../quarlus-security" }
quarlus-data = { path = "../quarlus-data", features = ["sqlite"] }
quarlus-openapi = { path = "../quarlus-openapi" }
quarlus-events = { path = "../quarlus-events" }
quarlus-scheduler = { path = "../quarlus-scheduler" }
quarlus-utils = { path = "../quarlus-utils" }
quarlus-prometheus = { path = "../quarlus-prometheus" }
tower-http = { version = "0.6", features = ["timeout"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.18", features = ["derive"] }
schemars = "0.8"

[dev-dependencies]
quarlus-test = { path = "../quarlus-test" }
quarlus-utils = { path = "../quarlus-utils" }
quarlus-openapi = { path = "../quarlus-openapi" }
quarlus-events = { path = "../quarlus-events" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
validator = { version = "0.18", features = ["derive"] }
http = "1"
