[package]
name = "example-microservice"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "product-service"
path = "src/product/main.rs"

[[bin]]
name = "order-service"
path = "src/order/main.rs"

[dependencies]
r2e = { path = "../r2e", features = ["openapi"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "0.8"
