[package]
name = "quarlus-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["cache", "ttl", "in-memory"]
categories = ["caching"]
description = "TTL cache with pluggable backends for Quarlus - in-memory caching with expiration"

[dependencies]
dashmap = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
