[package]
name = "quarlus-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlx = ["dep:sqlx"]
validation = ["dep:validator"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quarlus-macros = { path = "../quarlus-macros" }
sqlx = { version = "0.8", optional = true }
validator = { version = "0.18", features = ["derive"], optional = true }
serde_yaml = "0.9"
schemars = "0.8"
