[package]
name = "quarlus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core runtime for Quarlus web framework - AppBuilder, plugins, guards, and dependency injection"

[features]
default = []
validation = ["dep:validator"]
ws = ["axum/ws", "dep:dashmap"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "catch-panic", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quarlus-macros = { path = "../quarlus-macros", version = "0.1.0" }
validator = { version = "0.18", features = ["derive"], optional = true }
serde_yaml = "0.9"
schemars = "0.8"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
dashmap = { version = "6", optional = true }
futures-core = "0.3"
