[package]
name = "quarlus-data"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
quarlus-core = { path = "../quarlus-core" }
sqlx = { version = "0.8", features = ["runtime-tokio"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
