[package]
name = "quarlus-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["macros", "proc-macro", "web", "framework"]
categories = ["web-programming"]
description = "Procedural macros for Quarlus framework - Controller derive and routes attribute"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
