[package]
name = "quarlus-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["openapi", "swagger", "api-documentation"]
categories = ["web-programming"]
description = "OpenAPI 3.0 spec generation for Quarlus - automatic API documentation with Swagger UI"

[dependencies]
quarlus-core = { path = "../quarlus-core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
