[package]
name = "quarlus-prometheus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["prometheus", "metrics", "monitoring", "observability"]
categories = ["web-programming"]
description = "Prometheus metrics plugin for Quarlus - HTTP request tracking and /metrics endpoint"

[dependencies]
quarlus-core = { path = "../quarlus-core", version = "0.1.0" }
prometheus = "0.13"
tower = "0.5"
pin-project-lite = "0.2"
http = "1"
http-body = "1"
