[package]
name = "quarlus-rate-limit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["rate-limit", "throttle", "token-bucket"]
categories = ["web-programming"]
description = "Token-bucket rate limiting for Quarlus - per-user, per-IP, or global rate limits"

[dependencies]
dashmap = "6"
quarlus-core = { path = "../quarlus-core", version = "0.1.0" }
serde_json = "1"
