[package]
name = "quarlus-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["security", "jwt", "oidc", "authentication"]
categories = ["authentication", "web-programming"]
description = "JWT/OIDC security module for Quarlus - token validation, JWKS cache, and AuthenticatedUser extractor"

[dependencies]
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
quarlus-core = { path = "../quarlus-core", version = "0.1.0" }
