[package]
name = "quarlus-test"
version = "0.1.0"
edition = "2021"

[dependencies]
quarlus-core = { path = "../quarlus-core" }
quarlus-security = { path = "../quarlus-security" }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
