[package]
name = "quarlus-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["testing", "http-client", "jwt"]
categories = ["development-tools::testing"]
description = "Test utilities for Quarlus - TestApp HTTP client and TestJwt token generation"

[dependencies]
quarlus-core = { path = "../quarlus-core", version = "0.1.0" }
quarlus-security = { path = "../quarlus-security", version = "0.1.0" }
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
