[package]
name = "quarlus-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
quarlus-core = { path = "../quarlus-core" }
quarlus-cache = { path = "../quarlus-cache" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
