[package]
name = "quarlus-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["interceptors", "logging", "caching", "utilities"]
categories = ["web-programming"]
description = "Built-in interceptors for Quarlus - Logged, Timed, Cache, and CacheInvalidate"

[dependencies]
quarlus-core = { path = "../quarlus-core", version = "0.1.0" }
quarlus-cache = { path = "../quarlus-cache", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
