[package]
name = "quarlus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Quarkus-like ergonomic layer over Axum — declarative controllers, compile-time DI, and zero runtime reflection"

[features]
default = ["security", "events", "utils"]
full = ["security", "events", "utils", "data", "scheduler", "cache", "rate-limit", "openapi", "prometheus", "openfga"]
security = ["dep:quarlus-security"]
events = ["dep:quarlus-events"]
utils = ["dep:quarlus-utils"]
data = ["dep:quarlus-data"]
scheduler = ["dep:quarlus-scheduler"]
cache = ["dep:quarlus-cache"]
rate-limit = ["dep:quarlus-rate-limit"]
openapi = ["dep:quarlus-openapi"]
prometheus = ["dep:quarlus-prometheus"]
openfga = ["dep:quarlus-openfga"]
validation = ["quarlus-core/validation"]

[dependencies]
quarlus-core = { path = "../quarlus-core", version = "0.1.0" }
quarlus-macros = { path = "../quarlus-macros", version = "0.1.0" }
quarlus-security = { path = "../quarlus-security", version = "0.1.0", optional = true }
quarlus-events = { path = "../quarlus-events", version = "0.1.0", optional = true }
quarlus-utils = { path = "../quarlus-utils", version = "0.1.0", optional = true }
quarlus-data = { path = "../quarlus-data", version = "0.1.0", optional = true }
quarlus-scheduler = { path = "../quarlus-scheduler", version = "0.1.0", optional = true }
quarlus-cache = { path = "../quarlus-cache", version = "0.1.0", optional = true }
quarlus-rate-limit = { path = "../quarlus-rate-limit", version = "0.1.0", optional = true }
quarlus-openapi = { path = "../quarlus-openapi", version = "0.1.0", optional = true }
quarlus-prometheus = { path = "../quarlus-prometheus", version = "0.1.0", optional = true }
quarlus-openfga = { path = "../quarlus-openfga", version = "0.1.0", optional = true }
