[package]
name = "r2e-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["cache", "ttl", "in-memory"]
categories = ["caching"]
description = "TTL cache with pluggable backends for R2E - in-memory caching with expiration"

[dependencies]
bytes = {workspace = true}
dashmap = {workspace = true}

[dev-dependencies]
r2e-core = {workspace = true}
tokio = {workspace = true, features = ["full"]}
