[package]
name = "r2e-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["cli", "scaffolding", "code-generation"]
categories = ["command-line-utilities", "development-tools"]
description = "CLI tool for R2E - project scaffolding, code generation, and development server"

[[bin]]
name = "r2e"
path = "src/main.rs"

[dependencies]
clap = {workspace = true}
toml_edit = {workspace = true}
colored = {workspace = true}
dialoguer = {workspace = true}
chrono = {workspace = true}

[dev-dependencies]
tempfile = {workspace = true}
serial_test = {workspace = true}
