[package]
name = "r2e-compile-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]

[dev-dependencies]
r2e = { path = "../r2e", features = ["full"] }
bytes = "1"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
trybuild = "1"
