[package]
name = "r2e-compile-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]

[dev-dependencies]
r2e = {workspace = true, features = ["full"]}
bytes = {workspace = true}
schemars = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["full"]}
trybuild = {workspace = true}
