[package]
name = "r2e-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core runtime for R2E web framework - AppBuilder, plugins, guards, and dependency injection"

[features]
default = []
ws = ["axum/ws", "dep:dashmap"]
multipart = ["axum/multipart"]
dev-reload = ["dep:r2e-devtools"]

[dependencies]
axum = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tower = {workspace = true}
tower-http = {workspace = true, features = ["catch-panic", "cors", "trace"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["json"]}
serde = {workspace = true}
serde_json = {workspace = true}
r2e-macros = {workspace = true}
garde = {workspace = true, features = ["email"]}
form_urlencoded = {workspace = true}
serde_yaml = {workspace = true}
dotenvy = {workspace = true}
tokio-util = {workspace = true}
uuid = {workspace = true}
dashmap = {workspace = true, optional = true}
bytes = {workspace = true}
futures-core = {workspace = true}
r2e-devtools = {workspace = true, optional = true}

[dev-dependencies]
tempfile = {workspace = true}
http-body-util = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tokio-stream = {workspace = true}
tower = {workspace = true, features = ["util"]}
