[package]
name = "r2e-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core runtime for R2E web framework - AppBuilder, plugins, guards, and dependency injection"

[features]
default = []
ws = ["r2e-http/ws"]
multipart = ["r2e-http/multipart"]
proxy = ["r2e-http/proxy", "dep:hyper-util", "dep:pin-project-lite"]
dev-reload = ["dep:r2e-devtools"]
lazy-fallback-runtime = []

[dependencies]
r2e-http = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tower = {workspace = true}
tower-http = {workspace = true, features = ["catch-panic", "cors", "set-header", "trace"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["json"]}
serde = {workspace = true}
serde_json = {workspace = true}
r2e-macros = {workspace = true}
garde = {workspace = true, features = ["email"]}
form_urlencoded = {workspace = true}
serde_yaml = {workspace = true}
dotenvy = {workspace = true}
tokio-util = {workspace = true}
tokio-stream = {workspace = true, features = ["sync"]}
uuid = {workspace = true}
dashmap = {workspace = true}
bytes = {workspace = true}
futures-core = {workspace = true}
r2e-devtools = {workspace = true, optional = true}
hyper-util = {workspace = true, features = ["tokio"], optional = true}
pin-project-lite = {workspace = true, optional = true}

[dev-dependencies]
tempfile = {workspace = true}
http-body-util = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tower = {workspace = true, features = ["util"]}
