[package]
name = "r2e-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["database", "sql", "repository", "orm"]
categories = ["database"]
description = "Data access abstractions for R2E — Entity, Repository, Page, DataError (no driver deps)"

[dependencies]
r2e-core = { path = "../r2e-core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
