[package]
name = "r2e-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["database", "sql", "repository", "orm"]
categories = ["database"]
description = "Data access abstractions for R2E — Entity, Repository, Page, DataError (no driver deps)"

[dependencies]
r2e-core = {workspace = true}
serde = {workspace = true}
