[package]
name = "r2e-devtools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["hot-reload", "development", "subsecond"]
categories = ["development-tools"]
description = "Subsecond hot-reload integration for R2E"

[dependencies]
dioxus-devtools = { version = "0.7", features = ["serve"] }
