[package]
name = "r2e-events-kafka"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["events", "pubsub", "kafka", "streaming"]
categories = ["asynchronous"]
description = "Apache Kafka event bus backend for R2E — distributed event streaming"

[features]
default = ["cmake-build"]
cmake-build = ["rdkafka/cmake-build"]
dynamic-linking = ["rdkafka/dynamic-linking"]
integration = []

[dependencies]
r2e-events = { path = "../r2e-events", version = "0.1.0" }
rdkafka = { version = "0.36", features = ["tokio"] }
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures-util = "0.3"
tokio-util = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
