[package]
name = "r2e-events-kafka"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["events", "pubsub", "kafka", "streaming"]
categories = ["asynchronous"]
description = "Apache Kafka event bus backend for R2E — distributed event streaming"

[features]
default = ["cmake-build"]
cmake-build = ["rdkafka/cmake-build"]
dynamic-linking = ["rdkafka/dynamic-linking"]
integration = []

[dependencies]
r2e-events = {workspace = true}
rdkafka = {workspace = true}
tokio = {workspace = true, features = ["macros", "rt", "sync", "time"]}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
futures-util = {workspace = true}
tokio-util = {workspace = true}

[dev-dependencies]
tokio = {workspace = true, features = ["full"]}
