[package]
name = "r2e-events-rabbitmq"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["events", "pubsub", "rabbitmq", "amqp"]
categories = ["asynchronous"]
description = "RabbitMQ (AMQP 0-9-1) event bus backend for R2E — durable message queuing"

[features]
default = []
integration = []

[dependencies]
r2e-events = { path = "../r2e-events", version = "0.1.0" }
lapin = "2"
tokio = { version = "1", features = ["sync", "rt", "time", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
futures-util = "0.3"
tokio-util = "0.7"
tokio-executor-trait = "2"
tokio-reactor-trait = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
